<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/main"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:context=".MesSeances">

    <Button
            android:text="@string/exercices"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/butexercices"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            android:backgroundTint="@color/vert"
            android:layout_marginTop="46dp" app:layout_constraintTop_toBottomOf="@+id/calendarView"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="46dp"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="411dp"
            android:layout_height="112dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintVertical_bias="0.0" android:id="@+id/linearLayout">

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/vert" tools:ignore="UselessParent">

            <ImageButton
                    android:layout_width="79dp"
                    android:layout_height="match_parent"
                    android:background="@color/vert"
                    app:srcCompat="@drawable/arrow_back_ios_new_24dp_ffffff_fill0_wght400_grad0_opsz24"
                    android:id="@+id/backArrow"
                    android:layout_weight="0"
                    android:layout_gravity="start"
                    android:contentDescription="@string/back_arrow"/>

            <TextView
                    android:text="@string/mes_seances"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:layout_weight="3"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:typeface="serif" android:textSize="24sp"
            />
        </LinearLayout>
    </LinearLayout>
    <CalendarView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/calendarView"
            android:layout_marginEnd="31dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="30dp"
            app:layout_constraintHorizontal_bias="0.0"
            tools:ignore="MissingConstraints" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/butajoutseance"/>
    <Button
            android:text="@string/ajouter_une_seance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/butajoutseance"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp" app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/vert"
            android:textStyle="bold"

            android:layout_marginBottom="46dp" app:layout_constraintBottom_toTopOf="@+id/calendarView"
            android:layout_marginTop="46dp" app:layout_constraintTop_toBottomOf="@+id/linearLayout"/>
</androidx.constraintlayout.widget.ConstraintLayout>